# Housing-Finance-Assistant

./: .env.example  .gitattributes  .gitignore  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
apps/api/homefit_api/: __init__.py  cost_api.py  costs.py  data.py  data_api.py  demo.py  document_api.py  documents.py  errors.py  evaluation.py  llm.py  main.py  observability.py  operations.py  orchestration.py  orchestration_api.py  policies.py  policy_api.py  privacy.py  rag.py  rag_api.py  ranking.py  ranking_api.py  settings.py
apps/api/homefit_api/demo_data/: __init__.py  scenarios.json
apps/api/homefit_api/evaluation_data/: __init__.py  release_cases.json
apps/api/homefit_api/policy_data/: __init__.py  policy_catalog.json  policy_sources.json
apps/api/migrations/: 001_phase2.sql  002_phase4_policy_rules.sql  003_phase5_rankings.sql  004_phase6_documents.sql  005_phase7_policy_evidence.sql  006_phase8_agent_runs.sql
apps/api/tests/: test_costs.py  test_data.py  test_demo.py  test_documents.py  test_evaluation.py  test_health.py  test_llm.py  test_observability.py  test_operations.py  test_orchestration.py  test_policies.py  test_privacy.py  test_rag.py  test_ranking.py
apps/web/: package.json
apps/web/src/app/: decision-workspace.tsx  globals.css  layout.tsx  (+2 more)
outputs/: Phase_0_범위_요구사항_확정.md  Phase_10_안전성_보안_관측성.md  Phase_11_통합_테스트_평가_레드팀.md  Phase_12_배포_시연_운영_준비.md  Phase_1_UX_아키텍처_개발_기반.md  Phase_2_데이터_모델_개인정보_기반.md  Phase_3_주거비_계산_엔진.md  Phase_4_정책_데이터_규칙_엔진.md  Phase_5_후보_비교_다기준_최적화.md  Phase_6_문서_업로드_OCR_구조화_추출.md  Phase_7_정책_RAG_근거_관리.md  Phase_8_에이전트_오케스트레이션.md  Phase_9_Web_UI_의사결정_카드.md  집결정_AI_단계별_개발_로드맵.md  청년_주거_금융_도우미_기획안.md
(+4 files in other folders)
