[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "homefit-api"
version = "0.1.0"
description = "집결정 AI backend API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.139,<0.140",
  "pydantic-settings>=2.14,<3",
  "psycopg[binary]>=3.2,<4",
  "pypdf>=6.14,<7",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "mypy>=2.3,<2.4",
  "pip-tools>=7.6,<8",
  "pytest>=9.1,<10",
  "pytest-cov>=7.1,<8",
  "ruff>=0.15,<0.16",
]

[tool.setuptools]
package-dir = {"" = "apps/api"}

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["homefit_api*"]

[tool.setuptools.package-data]
"homefit_api.policy_data" = ["*.json"]
"homefit_api.evaluation_data" = ["*.json"]
"homefit_api.demo_data" = ["*.json"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --strict-config --strict-markers --cov=homefit_api --cov-report=term-missing"
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["homefit_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["homefit_api"]
mypy_path = "apps/api"
warn_unused_configs = true
